Notification service added to facade
